<resources>

    <string name="app_name">Adobes v0.21</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragmentWaitingList">LISTA ESPERA</string>
    <string name="fragmentEmpty">MESAS</string>
    <string name="fragmentReservations">RESERVACIONES</string>

    <!--WaitingList-->
                            <!--Fragment-->
    <string name="act_frag_waitingList_check_active">ACTIVAS</string>
    <string name="act_frag_waitingList_check_canceled">CANCELADAS</string>

    <string name="act_frag_waitingList_field_accountOwner">A nombre de:</string>
    <string name="act_frag_waitingList_field_hour">Hora</string>
    <string name="act_frag_waitingList_field_adults">No. adultos</string>
    <string name="act_frag_waitingList_field_children">No. niños</string>
    <string name="act_frag_waitingList_field_status">Estatus</string>

    <string name="act_frag_waitingList_fab_descripction">Añade nuevo cliente</string>

                             <!--Edit WaitingList-->
    <string name="act_editWaitingList_title">Editar en Lista de Espera</string>

    <string name="act_editWaitingList_switch_edit">Editar registro</string>

    <string name="act_editWaitingList_field_accountOwner">Nombre</string>
    <string name="act_editWaitingList_field_adults">No. de adultos</string>
    <string name="act_editWaitingList_field_children">No. de niños</string>
    <string name="act_editWaitingList_field_comments">Comentarios</string>
    <string name="act_editWaitingList_field_phone">Teléfono</string>

    <string name="act_editWaitingList_button_cancelCommand">CANCELAR COMANDA</string>
    <string name="act_editWaitingList_button_saveCommand">GUARDAR</string>

                            <!--Edit Reservation-->
    <string name="act_editReservation_title">Editar Reservación</string>

    <string name="act_editReservation_switch_edit">Editar registro</string>

    <string name="act_editReservation_field_accountOwner">Nombre</string>
    <string name="act_editReservation_field_adults">No. de adultos</string>
    <string name="act_editReservation_field_children">No. de niños</string>
    <string name="act_editReservation_field_comments">Comentarios</string>
    <string name="act_editReservation_field_phone">Teléfono</string>

    <string name="act_editReservation_button_cancelCommand">CANCELAR RESERVACIÓN</string>
    <string name="act_editReservation_button_saveCommand">GUARDAR</string>

                            <!--Create WaitingList-->
    <string name="act_createWaitingList_title">Crear en Lista de Espera</string>

    <string name="act_createWaitingList_field_accountOwner">Nombre</string>
    <string name="act_createWaitingList_field_adults">No. de adultos</string>
    <string name="act_createWaitingList_field_children">No. de niños</string>
    <string name="act_createWaitingList_field_comments">Comentarios</string>
    <string name="act_createWaitingList_field_phone">Teléfono</string>

    <string name="act_createWaitingList_button_saveCommand">GUARDAR</string>

                            <!--Create WaitingList-->
    <string name="act_createReservation_title">Crear Reservación</string>

    <string name="act_createReservation_field_accountOwner">Nombre</string>
    <string name="act_createReservation_field_adults">No. de adultos</string>
    <string name="act_createReservation_field_children">No. de niños</string>
    <string name="act_createReservation_field_comments">Comentarios</string>
    <string name="act_createReservation_field_phone">Teléfono</string>

    <string name="act_createReservation_button_saveCommand">GUARDAR</string>

</resources>