<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditWaitingListActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/layout_parent_margin_horizontal"
        android:layout_marginVertical="@dimen/layout_parent_margin_vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/act_editWaitingList_title"
            android:textSize="@dimen/font_title"
            android:textStyle="bold"
            android:layout_marginVertical="@dimen/margin_title_vertical"
            tools:ignore="SpUsage" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Switch
            android:id="@+id/act_editWaitingList_switch_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_editWaitingList_switch_edit"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded,UseSwitchCompatOrMaterialXml"
            android:layout_marginBottom="@dimen/margin_between_component_vertical"/>


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_editWaitingList_field_accountOwner" />

        <EditText
            android:id="@+id/act_editWaitingList_edit_accountOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/act_editWaitingList_field_accountOwner"
            android:inputType="textPersonName"
            android:layout_marginBottom="@dimen/margin_between_component_vertical"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_editWaitingList_field_adults" />

        <EditText
            android:id="@+id/act_editWaitingList_edit_noAdults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/act_editWaitingList_field_adults"
            android:inputType="number"
            android:layout_marginBottom="@dimen/margin_between_component_vertical"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_editWaitingList_field_children" />

        <EditText
            android:id="@+id/act_editWaitingList_edit_noChildren"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/act_editWaitingList_field_children"
            android:inputType="number"
            android:layout_marginBottom="@dimen/margin_between_component_vertical"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_editWaitingList_field_comments" />

        <EditText
            android:id="@+id/act_editWaitingList_edit_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:hint="@string/act_editWaitingList_field_comments"
            android:inputType="textMultiLine"
            android:layout_marginBottom="@dimen/margin_between_component_vertical"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_editWaitingList_field_phone" />

        <EditText
            android:id="@+id/act_editWaitingList_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:hint="@string/act_editWaitingList_field_phone"
            android:inputType="phone"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/act_editWaitingList_btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/act_editWaitingList_button_cancelCommand" />

            <Button
                android:id="@+id/act_editWaitingList_btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/act_editWaitingList_button_saveCommand" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>